--- a/patientCSS.css
+++ b/patientCSS.css
@@ -5,6 +5,27 @@
 	
 }
 
+body{
+	background-color: skyblue;
+	font-family: "Open Sans", Arial, "sans-serif";
+}
+
+table{
+	background-color: white;
+	margin: 1em auto;
+	border: none;
+}
+
+td{
+	border: none;
+}
+
+h3{
+	color: skyblue;
+	border-bottom: solid 2px;
+	padding: 5px;
+}
+
 .nav{
 	
 	
@@ -43,8 +64,12 @@ button{
 .appTitle{
 	
 	font-size: 35px;
-	font-style: oblique;
+	font-weight: 900;
 	text-align: center;
+	color: lightblue;
+	text-transform: uppercase;
+	border-bottom: solid 2px lightblue;
+	padding: 20px;
 }
 
 
@@ -52,14 +77,6 @@ button{
 	font-size: 30px;
 }
 
-.mainBodyTitle{
-	
-	font-size: 40px;
-	font-style: bold;
-	padding-left: 20px;
-	text-decoration: underline;
-	
-}
 
 #textContainer{
 	position: relative;
@@ -81,15 +98,20 @@ button{
 
 .scheduleAppointment{
 	text-align: center;
-	
 	vertical-align: text-bottom;
 	background-color: lightblue;
 }
 
-.scheduleAppointment td{
-	
-	text-align: center;
-	 
+.sectionButton{
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	line-height: normal;
+	max-width: 200px;
+	margin: auto;
+	display: block;
+	border: none;
+	padding: 10px 0px 10px 0px
 	
 }
 /*.signout{
@@ -103,4 +125,25 @@ button{
 
 .banner img{
 	padding: 10px;
+}
+
+/* Prescription Page */
+
+.prescriptionContainer{
+	background-color: #EEF7FA;
+	border: solid medium skyblue;
+	border-radius: 10px;
+	margin: 0px 10px 20px 10px;
+	padding: 15px;
+}
+
+.spaceBetween{
+	display: flex;
+	justify-content: space-between;
+}
+
+.drugName{
+	color: skyblue;
+	font-weight: 900;
+
 }
